app/assets/stylesheets/components/page_specific/_home_top.scss
// Banner at the top of the home page
//
// Styleguide Home Top

.home-top {
  background: image-url("retirement_shop_small_en.png") 0 100% no-repeat;
  background-size: 100%;
  padding-bottom: 50%;
  position: relative;
  @if $responsive {
    background-image: image-url("retirement_shop_en.png");
  }

  .theme-cy & {
    background-image: image-url("retirement_shop_small_cy.png");
    @if $responsive {
      background-image: image-url("retirement_shop_cy.png");
    }
  }

  @include respond-to($mq-m) {
    background-position: 113% 108%;
    background-size: 60%;
    padding-bottom: 0;
  }

  @include respond-to($mq-l) {
    background-position: 150% 100%;
    background-size: 54%;
    @if $responsive {
      background-position: 107% 100%;
    }
  }

  @include respond-to($mq-xl) {
    background: none;
    overflow: hidden;

    .theme-cy & {
      background: none;
    }
  }
}

.home-top-trust {
  position: relative;
  margin-top: $baseline-unit*7;
  margin-bottom:  $baseline-unit*7;

  @include respond-to($mq-xl) {
    width: 1000px;
  }
}

.home-top__image {
  @include respond-to($mq-xl) {
    background: image-url("retirement_shop_en.png") 100% 52% no-repeat;
    background-size: 46%;
    height: 345px;
    margin: 0 auto;
    position: absolute;
    width: 1350px;

    .theme-cy & {
      background-image: image-url("retirement_shop_cy.png");
    }
  }
}

.home-top-trust__heading {
  @extend %font-heading-heavy;
  @include body(36, 42);
  color: $color-heading-extra-small;
  margin: 0;
  padding-bottom: $baseline-unit*7;
  padding-top: 0;

  @include respond-to($mq-small-tablet, $mq-small-tablet-end) {
    max-width: 500px;
  }

  @include respond-to($mq-m) {
    @include body(42, 48);

    .theme-cy & {
      max-width: 600px;
    }
  }

  @include respond-to($mq-l) {
    max-width: 530px;

    .theme-cy & {
      max-width: 500px;
    }
  }

  @include respond-to($mq-xl) {
    max-width: 620px;

    .theme-cy & {
      max-width: 750px;
    }
  }
}

.home-top-trust-content {
  @extend .unstyled-list;
  @extend .list-benefits;
  margin-bottom: $baseline-unit*2;
}

.home-top-trust-content__item {
  @extend %font-heading-medium;
  @include body(16, 24);
  margin-bottom: $baseline-unit;

  @include respond-to($mq-m) {
    max-width: 45%;
  }

  @include respond-to($mq-l) {
    max-width: none;

    .theme-cy & {
      max-width: 570px;
    }
  }

  @include respond-to($mq-l, $mq-xl) {
    .theme-cy & {
      max-width: 50%;
    }
  }
}

.home-top-promo {
  clear: both;

  @include respond-to($mq-small-tablet, $mq-small-tablet-end) {
    bottom: 0;
    left: 0;
    position: absolute;
  }

  @include respond-to($mq-l) {
    bottom: 0;
    clear: none;
    margin: 0;
    position: absolute;
    right: 3%;
  }
}

.home-top-promo__text {
  @extend %font-heading-heavy;
  @include body(22, 30);
  background: rgba(0,0,0,0.8);
  border-radius: 6px;
  margin: 0 $baseline-unit*3;
  max-width: 400px;
  padding: $baseline-unit*4 $baseline-unit*7 $baseline-unit*4 $baseline-unit*4;
  position: relative;

  @include respond-to($mq-small-tablet) {
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
  }

  @include respond-to($mq-m) {
    margin: $baseline-unit*2 0 0;
    padding: $baseline-unit*2 $baseline-unit*8 $baseline-unit*2 $baseline-unit*4;
    width: 55%;
  }

  @include respond-to($mq-l) {
    width: 80%;
  }
}

.home-top-promo-link {
  display: block;

  &:link,
  &:focus,
  &:visited,
  &:hover {
    color: $color-white;
  }
}

.home-top-promo-link__arrow {
  fill: $color-white;
  height: 34px;
  position: absolute;
  right: 5%;
  top: 30%;
  width: 21px;
}

